fix some spacing issues

--- a/client/src/css/People.css
+++ b/client/src/css/People.css
@@ -66,7 +66,7 @@
     display: flex;
     flex-direction: row;
     .relation-list{
-      flex: 1 0 1px;
+      flex: 1 0 auto;
       h3{
         text-transform: capitalize;
         margin: 0;
@@ -74,7 +74,7 @@
         border-bottom: 1px solid $medium-dark-grey;
       }
       &:not(:first-child){
-        margin-left: 20px;
+        margin-left: 50px;
       }
     }
   }
